simplify generation of validation error cookie
* remove strange hacks with character "\u0001" - just use old good JSON format instead;
* improve logging of parsing errors
* write missing unit-tests for cookies and validation errors
* remove unneeded field `Error.severity`;
* convert Array `Error.variables` to Collection;